<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bouboule</string>
    <string name="Play">PLAY</string>
    <string name="Parameters">PARAMETERS</string>
    <string name="HighScore">HIGHSCORE</string>
    <string name="dynamicName">BOUBOULE</string>
    <string name="action_settings">Settings</string>
    <string name="hello">HELLO</string>
    <string name="be_with_your">MAY THE\nBOUBOULE\nBE WITH YOU</string>
    <string name="you_best">KICK THEM ALL!</string>
    <string name="title_activity_victory">VictoryActivity</string>
    <string name="title_activity_loosing">LoosingActivity</string>
    <string name="title_activity_ChoosingActivity">Choosing Activity</string>
    
    <!-- Menu Parameters -->
    <string name="title_activiy_menuParameters">Settings</string>
    <string name="user">User settings</string>
    <string name="global">Global settings</string>
    <string name="about">About</string>
    
    <!-- Menu user settings -->
    <string name="user_newUser">Create new user:</string>
    <string name="user_activeUser">Select user:</string>
    <string name="user_playerball">Choose your Bouboule:</string>
    <string name="user_namenewuser">New user created!</string>
    <string name="user_namecharerror">The username can\'t contain special characters.</string>
    <string name="user_nameidenticalerror">This username already exists!</string>
    <string name="user_nameemptyerror">The username can\'t be empty, \".\" or \"..\".</string>
    <string name="user_choose_level_txt">Choose the level to start with:</string>
    <string name="user_choose_level_current">Current level: </string>
    <string name="user_choose_level_max">max: </string>
    <string name="user_resetgame">End current game</string>
    <string name="user_resetgame_notif">Your game has been reset!</string>
    <string name="user_yes">Yes</string>
    <string name="user_no">No</string>
    <string name="user_continuereset">It will restart the game to level 1 and keep all unlocked worlds.\nDo you want to continue?</string>
    <string name="user_tuto">Show the tutorial:</string>
    <string name="user_continuetuto">It will restart the game to level 1 and display the tutorial.\nDo you want to continue?</string>
    <string name="user_tuto_notif">Your game has been reset and the tutorial will be shown at first play!</string>
    <string name="user_tuto_on">Yes</string>
    <string name="user_tuto_off">No</string>
    
    <!-- Menu global settings -->
    <string name="global_sound">Sound:</string>
    <string name="global_sound_off">Mute</string>
    <string name="global_sound_on">Music On</string>
<!--
    <string name="global_rotate">Rotation of the balls:</string>
    <string name="global_rotate_off">No rotation</string>
    <string name="global_rotate_on">Rotation On</string>
    <string name="global_sensitivity">Sensitivity:</string>
-->
    <string name="global_bonus">Bonus:</string>
    
    <!-- Menu Parameters_about -->
    <string name="about_nameapp">App\'s name:</string>
    <string name="about_nameapp_txt">Bouboule</string>
    <string name="about_authors">Authors:</string>
    <string name="about_authors_txt">Baerts Matthieu (v1+), Remy Baptiste (v1), Van Wallendael Nicolas (v1+) and Verhaeghe Hélène (v1)</string>
    <string name="about_licence">Credits &amp; License:</string>
    <string name="about_licence_txt">Bouboule was developed during the course FSAB1509 - Projet Informatique (Yves Deville, Université Catholique de Louvain, Belgium), 2012–2013.\n\nOpen-Source GPL3 license.\n\nDeveloped with LibGDX (Free and Open-Source game development framework under Apache License 2.0).</string>
    <string name="about_version">Version:</string>
    <string name="about_version_txt">Version </string>
    <string name="about_date">Date:</string>
    <string name="about_date_txt">2013</string>
    <string name="about_graphism">Graphisms:</string>
    <string name="about_graphism_txt">Van Wallendael Julien</string>
    <string name="about_music">Music and sounds:</string>
    <string name="about_music_txt">Adans Paschal (adanspaschal@gmail.com)\nMusic of SpaceShip arena by Klez (The gateway)</string>
    
    <!-- Menu Pause -->
    <string name="Pause_continue">Continue</string>
    <string name="Menu">Menu</string>
    <string name="Quit">Quit</string>
    <string name="Pause">Pause</string>
    <string name="pause">PAUSE</string>
    
    <!-- Menu Victory -->
    
    <!-- Menu Loosing -->
    
    <!-- Menu GameOver -->
    <string name="GameOver">12345</string>
    <string name="title_activity_gameover">GameOverActivity</string>
    <string name="GameOverHighScore">HIGH SCORE</string>
    
    <!-- Menu - HighScore -->
    <string name="by_someone">by</string>
    <string name="at_level_x">at level</string>
    <string name="Score">Score:</string>
    <string name="no_highscore">No high score yet</string>
    <string name="Level">level</string>

    <!-- Translatable strings -->
    <string name="share_high_score">Click here to share your high score!</string>
    <string name="share_this_score">Click here to share this score!</string>
    <string name="last_score">This is my last score at Bouboule Game:</string>
    <string name="high_score">This is my high score at Bouboule Game:</string>
    <string name="beat_me">Try to beat me at this mobile game!</string>
    
</resources>