<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FullscreenTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuParametre_about"     
    android:background="@drawable/settings_blanc" >
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_margin="50dp"
	    android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/txt_nameapp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/about_nameapp"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/txt_nameapp_txt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:text="@string/about_nameapp_txt"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/txt_authors"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/about_authors"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/txt_authors_txt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:text="@string/about_authors_txt"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/txt_graphism"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/about_graphism"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/txt_graphism_txt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:text="@string/about_graphism_txt"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/txt_music"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/about_music"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/txt_music_txt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:text="@string/about_music_txt"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/txt_licence"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/about_licence"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/txt_licence_txt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:text="@string/about_licence_txt"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/txt_version"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/about_version"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/txt_version_txt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:text="@string/about_version_txt"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/txt_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/about_date"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/txt_date_txt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp"
	        android:text="@string/about_date_txt"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	</LinearLayout>
</FrameLayout>