<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FullscreenTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuParameters_about"     
    android:background="@drawable/settings_blank" >
	
    <ScrollView
	    android:id="@+id/about_scrollView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="50dp"
		    android:orientation="vertical" >
		
		    <TextView
		        android:id="@+id/about_nameapp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:text="@string/about_nameapp"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <TextView
		        android:id="@+id/about_nameapp_txt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/about_nameapp_txt"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

		    <Space
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
		
		    <TextView
		        android:id="@+id/about_authors"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:text="@string/about_authors"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <TextView
		        android:id="@+id/about_authors_txt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/about_authors_txt"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <TextView
		        android:id="@+id/about_graphism"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:text="@string/about_graphism"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <TextView
		        android:id="@+id/about_graphism_txt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/about_graphism_txt"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <TextView
		        android:id="@+id/about_music"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:text="@string/about_music"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <TextView
		        android:id="@+id/about_music_txt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/about_music_txt"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <TextView
		        android:id="@+id/about_licence"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:text="@string/about_licence"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <TextView
		        android:id="@+id/about_licence_txt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/about_licence_txt"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <TextView
		        android:id="@+id/about_version"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:text="@string/about_version"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <TextView
		        android:id="@+id/about_version_txt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <TextView
		        android:id="@+id/about_date"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:text="@string/about_date"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <TextView
		        android:id="@+id/about_date_txt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/about_date_txt"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <Space
		        android:layout_width="match_parent"
		        android:layout_height="50dp" />
		    
		
		</LinearLayout>
 
		
		
	</ScrollView>

</FrameLayout>