<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/fullscreen_content_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="75dip"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/pause"
            android:textColor="#33b5e5"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/PauseContinueButton"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/PauseMenuButton"
            android:layout_alignRight="@+id/PauseMenuButton"
            android:layout_marginBottom="58dp"
            android:background="@null"
            android:text="@string/Pause_continue"
            android:textColor="#33b5e5"
            android:textSize="40sp" />

        <Button
            android:id="@+id/PauseMenuButton"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/Menu"
            android:textColor="#33b5e5"
            android:textSize="40sp" />

        <Button
            android:id="@+id/PauseQuitButton"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PauseMenuButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:background="@null"
            android:text="@string/Quit"
            android:textColor="#33b5e5"
            android:textSize="40sp" />
    </RelativeLayout>

</FrameLayout>