<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".MenuParametre_global"     
    	android:background="@drawable/settings_blanc" >
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_margin="50dp"
	    android:orientation="vertical" >
	 
	        
		<TextView
			android:id="@+id/global_sound_txt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/global_sound"
			android:layout_marginTop="5dp"
			android:textAppearance="?android:attr/textAppearanceLarge" />
		   
		<Switch
		    android:id="@+id/global_sound_switch"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textOff="@string/global_sound_off"
		    android:textOn="@string/global_sound_on"
	        android:layout_marginBottom="5dp" />
		
		<TextView
			android:id="@+id/global_sensitivity_txt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/global_sensitivity"
			android:layout_marginTop="5dp"
			android:textAppearance="?android:attr/textAppearanceLarge" />
	
		<SeekBar
		    android:id="@+id/global_sensitivity_bar"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
	        android:layout_marginBottom="5dp" />
	        
	
	</LinearLayout>
</FrameLayout>